tests/invalid/Reference_Invalid_4.whiley
method main():
    int x = 0
    &int ptr = new *x